--- a/r_scripts/data_wrangling.Rmd
+++ b/r_scripts/data_wrangling.Rmd
@@ -37,6 +37,7 @@ library(sp)
 library(english)
 library(corrplot)
 library(chisq.posthoc.test)
+library(ecoflux)
 knitr::opts_chunk$set(echo = F)
 # options(scipen=1, digits=2)
 options(scipen=999, digits = 3)
@@ -50,6 +51,18 @@ table_font_sz <- 8
 
 heaD <- function(x,...){
   head(x, ...)
+}
+
+num_cols <- function(x){
+  x[, sapply(x, is.numeric)]
+}
+
+group_sum <- function(df, col, r_names){
+  col <- as.character(col)
+  x <- df[df[, col] %in% r_names, ]
+  num_df <- data.frame(as.list(colSums(num_cols(x))))
+  cat_df <- setNames(data.frame(paste0(x[, col], collapse = ", ")), col) 
+  cbind(cat_df, num_df)
 }
 
 fmt <- function(x, ...){format(x, big.mark=",",scientific=FALSE, ...)}
@@ -569,30 +582,44 @@ in_trans_metadata <- metadata[metadata[,"wgs_id"] %in% names(clusters), ]
 
 # FOR TABLE
 
-
+# Make new col for status
 metadata$trans_status <- ifelse(metadata[,"wgs_id"] %in% names(clusters), "in_trans", "not_in_trans")
 
 round_to <- 1
 
+# Lin
 trans_lin_pivot <- reshape2::dcast(metadata, main_lineage ~ trans_status, value.var = "trans_status", fun.aggregate = length)
 trans_lin_pivot$in_trans_pc <- round((trans_lin_pivot$in_trans/sum(trans_lin_pivot$in_trans))*100, round_to)
 trans_lin_pivot$not_in_trans_pc <- round((trans_lin_pivot$not_in_trans/sum(trans_lin_pivot$not_in_trans))*100, round_to)
 
+# DR
 trans_dr_pivot <- reshape2::dcast(metadata, dr_status ~ trans_status, value.var = "trans_status", fun.aggregate = length)
 trans_dr_pivot <- trans_dr_pivot[order(match(trans_dr_pivot$dr_status, dr_status_vect)), ]
 trans_dr_pivot$in_trans_pc <- round((trans_dr_pivot$in_trans/sum(trans_dr_pivot$in_trans))*100, round_to)
 trans_dr_pivot$not_in_trans_pc <- round((trans_dr_pivot$not_in_trans/sum(trans_dr_pivot$not_in_trans))*100, round_to)
+# Group DR categories for fisher tests
+# Sens, (Pre-MDR + MDR + Other), (Pre-XDR + XDR)
+trans_dr_pivot <- rbind(
+  trans_dr_pivot[trans_dr_pivot[, "dr_status"] %in% "Sensitive", ],
+  group_sum(trans_dr_pivot, "dr_status", c("Pre-MDR", "MDR", "Other")),
+  group_sum(trans_dr_pivot, "dr_status", c("Pre-XDR", "XDR"))
+)
 
-
+# Loc
 trans_loc_pivot <- reshape2::dcast(metadata, location_other ~ trans_status, value.var = "trans_status", fun.aggregate = length)
 trans_loc_pivot$in_trans_pc <- round((trans_loc_pivot$in_trans/sum(trans_loc_pivot$in_trans))*100, round_to)
 trans_loc_pivot$not_in_trans_pc <- round((trans_loc_pivot$not_in_trans/sum(trans_loc_pivot$not_in_trans))*100, round_to)
+# Group locations together for fisher tests
+trans_loc_pivot <- rbind(
+  trans_loc_pivot[trans_loc_pivot[, "location_other"] %in% c("Abbottabad", "Dera Ismail Khan", "Peshawar", "Swat"), ],
+  group_sum(trans_loc_pivot, "location_other", c("Hyderabad", "Karachi", "Lahore", "Other", "Rawalpindi"))
+)
+trans_loc_pivot[grep("Hyderabad", trans_loc_pivot[, "location_other"]), "location_other"] <- "Other"
 
-
+# Put together
 trans_df <- rbind(trans_lin_pivot, 
                   setNames(trans_dr_pivot, names(trans_lin_pivot)), 
                   setNames(trans_loc_pivot, names(trans_lin_pivot)))
-
 
 trans_df$category <- c(rep("Lineage", nrow(trans_lin_pivot)), 
                        rep("DR status", nrow(trans_dr_pivot)), 
@@ -605,107 +632,106 @@ trans_df <- trans_df[, c("category", "X", "in_trans", "in_trans_pc", "not_in_tra
 # ------
 
 
-# Make df of samples in and not in transmission
-trans_samps <- names(clusters)
-non_trans_samps <- metadata[!(metadata[,"wgs_id"] %in% trans_samps), "wgs_id"]
-trans_non_trans_df <- data.frame(id = c(trans_samps, non_trans_samps), trans_status = c(rep(1, length(trans_samps)), rep(0, length(non_trans_samps))))
+# # Make df of samples in and not in transmission
+# trans_samps <- names(clusters)
+# non_trans_samps <- metadata[!(metadata[,"wgs_id"] %in% trans_samps), "wgs_id"]
+# trans_non_trans_df <- data.frame(id = c(trans_samps, non_trans_samps), trans_status = c(rep(1, length(trans_samps)), rep(0, length(non_trans_samps))))
+# 
+# # Write out trans_non_trans_df
+# write.csv(trans_non_trans_df, file = "../metadata/trans.csv", row.names = F, quote = F, col.names = F)
+# 
+# # Lineage
+# lin <- tab2df(table(in_trans_metadata$main_lineage))
+# # DR
+# dr <- tab2df(table(in_trans_metadata$dr_status))
+# dr <- dr[, dr_status_vect]
+# 
+# # Loc -
+# # n.b. have to do all this messy wrangling because not all locs are represented in transmission,
+# # so need a pivot table that includes all the 0s
+# # loc <- tab2df(table(in_trans_metadata$location))
+# # loc_data <- metadata[, c("wgs_id", "location")]
+# loc_data <- metadata[, c("wgs_id", "location_other")]
+# loc_data$trans_status <- ifelse(loc_data$wgs_id %in% names(clusters), 1, 0)
+# loc_data$location <- ifelse(loc_data$location == "", NA, loc_data$location)
+# loc_piviot <- reshape2::dcast(loc_data, trans_status ~ location, value.var = "trans_status",
+#                               fun.aggregate = length)
+# loc <- loc_piviot[loc_piviot[, "trans_status"] == 1, !(names(loc_piviot) %in% "trans_status")]
+# 
+# # Put all together
+# in_trans_df <- t(cbind(lin, dr, loc))
+# in_trans_df_rows <- row.names(in_trans_df)
+# in_trans_df <- data.frame(in_trans_df)
+# names(in_trans_df) <- "N"
+# in_trans_df$pc <- (in_trans_df$N/length(clusters))*100
+# # in_trans_df$X <- row.names(in_trans_df)
+# in_trans_df$X <- in_trans_df_rows
+# in_trans_df$Y <- c(rep("Lineage", length(lin)), rep("DR status", length(dr)), rep("Location", length(loc)))
+# row.names(in_trans_df) <- NULL
+# in_trans_df <- in_trans_df[, c("Y", "X", "N", "pc")]
+# names(in_trans_df) <- c("", "", "N", "pc")
+# row.names(in_trans_df) <- NULL
+# 
+# 
+# # -----
+# 
+# # Tests and plots - chi sq etc
+# 
+# # Lineage
+# 
+# # Row-bind the samples that are 'in transmission' vs non-in-transmission, by lineage
+# lin_contingency_tab <- rbind(lin, tab2df(table(metadata[!(metadata[,"wgs_id"] %in% names(clusters)), ]$main_lineage)))
+# row.names(lin_contingency_tab) <- c("yes", "no")
+# 
+# # Make df
+# lin_contingency_tab_df <- lin_contingency_tab
+# 
+# # Convert the data as a table
+# lin_contingency_tab <- as.table(as.matrix(lin_contingency_tab))
+# 
+# # Do test
+# trans_lin_chi_sq <- chisq.test(lin_contingency_tab)
+# 
+# # Do post-hoc test
+# trans_lin_chi_sq_ph <- chisq.posthoc.test(lin_contingency_tab)
+# 
+# # DR status
+# 
+# # Row-bind the samples that are 'in transmission' vs non-in-transmission, by DR
+# dr_contingency_tab <- rbind(dr, tab2df(table(metadata[!(metadata[,"wgs_id"] %in% names(clusters)), ]$dr_status)))
+# row.names(dr_contingency_tab) <- c("yes", "no")
+# 
+# # Make df
+# dr_contingency_tab_df <- dr_contingency_tab
+# 
+# # Convert the data as a table
+# dr_contingency_tab <- as.table(as.matrix(dr_contingency_tab))
+# 
+# # Do test
+# trans_dr_chi_sq <- chisq.test(dr_contingency_tab, simulate.p.value = T)
+# # Do post hoc test
+# trans_dr_chi_sq_ph <- chisq.posthoc.test(dr_contingency_tab)
+# 
+# # Location
+# 
+# # Row-bind the samples that are 'in transmission' vs non-in-transmission, by loc
+# loc_contingency_tab <- loc_piviot[, !(names(loc_piviot) %in% "trans_status")]
+# # Swap the rows
+# loc_contingency_tab <- loc_contingency_tab[c(2, 1), ]
+# row.names(loc_contingency_tab) <- c("yes", "no")
+# 
+# # Make df
+# loc_contingency_tab_df <- loc_contingency_tab
+# 
+# # Convert the data as a table
+# loc_contingency_tab <- as.table(as.matrix(loc_contingency_tab))
+# # Do test
+# trans_loc_chi_sq <- chisq.test(loc_contingency_tab, simulate.p.value = T)
+# # Do post-hoc test
+# trans_loc_chi_sq_ph <- chisq.posthoc.test(loc_contingency_tab)
 
-# Write out trans_non_trans_df
-write.csv(trans_non_trans_df, file = "../metadata/trans.csv", row.names = F, quote = F, col.names = F)
 
-# Lineage
-lin <- tab2df(table(in_trans_metadata$main_lineage))
-# DR
-dr <- tab2df(table(in_trans_metadata$dr_status))
-dr <- dr[, dr_status_vect]
-
-# Loc -
-# n.b. have to do all this messy wrangling because not all locs are represented in transmission,
-# so need a pivot table that includes all the 0s
-# loc <- tab2df(table(in_trans_metadata$location))
-# loc_data <- metadata[, c("wgs_id", "location")]
-loc_data <- metadata[, c("wgs_id", "location_other")]
-loc_data$trans_status <- ifelse(loc_data$wgs_id %in% names(clusters), 1, 0)
-loc_data$location <- ifelse(loc_data$location == "", NA, loc_data$location)
-loc_piviot <- reshape2::dcast(loc_data, trans_status ~ location, value.var = "trans_status",
-                              fun.aggregate = length)
-loc <- loc_piviot[loc_piviot[, "trans_status"] == 1, !(names(loc_piviot) %in% "trans_status")]
-
-# Put all together
-in_trans_df <- t(cbind(lin, dr, loc))
-in_trans_df_rows <- row.names(in_trans_df)
-in_trans_df <- data.frame(in_trans_df)
-names(in_trans_df) <- "N"
-in_trans_df$pc <- (in_trans_df$N/length(clusters))*100
-# in_trans_df$X <- row.names(in_trans_df)
-in_trans_df$X <- in_trans_df_rows
-in_trans_df$Y <- c(rep("Lineage", length(lin)), rep("DR status", length(dr)), rep("Location", length(loc)))
-row.names(in_trans_df) <- NULL
-in_trans_df <- in_trans_df[, c("Y", "X", "N", "pc")]
-names(in_trans_df) <- c("", "", "N", "pc")
-row.names(in_trans_df) <- NULL
-
-
-# -----
-
-# Tests and plots - chi sq etc
-
-# Lineage
-
-# Row-bind the samples that are 'in transmission' vs non-in-transmission, by lineage
-lin_contingency_tab <- rbind(lin, tab2df(table(metadata[!(metadata[,"wgs_id"] %in% names(clusters)), ]$main_lineage)))
-row.names(lin_contingency_tab) <- c("yes", "no")
-
-# Make df
-lin_contingency_tab_df <- lin_contingency_tab
-
-# Convert the data as a table
-lin_contingency_tab <- as.table(as.matrix(lin_contingency_tab))
-
-# Do test
-trans_lin_chi_sq <- chisq.test(lin_contingency_tab)
-
-# Do post-hoc test
-trans_lin_chi_sq_ph <- chisq.posthoc.test(lin_contingency_tab)
-
-# DR status
-
-# Row-bind the samples that are 'in transmission' vs non-in-transmission, by DR
-dr_contingency_tab <- rbind(dr, tab2df(table(metadata[!(metadata[,"wgs_id"] %in% names(clusters)), ]$dr_status)))
-row.names(dr_contingency_tab) <- c("yes", "no")
-
-# Make df
-dr_contingency_tab_df <- dr_contingency_tab
-
-# Convert the data as a table
-dr_contingency_tab <- as.table(as.matrix(dr_contingency_tab))
-
-# Do test
-trans_dr_chi_sq <- chisq.test(dr_contingency_tab, simulate.p.value = T)
-# Do post hoc test
-trans_dr_chi_sq_ph <- chisq.posthoc.test(dr_contingency_tab)
-
-# Location
-
-# Row-bind the samples that are 'in transmission' vs non-in-transmission, by loc
-loc_contingency_tab <- loc_piviot[, !(names(loc_piviot) %in% "trans_status")]
-# Swap the rows
-loc_contingency_tab <- loc_contingency_tab[c(2, 1), ]
-row.names(loc_contingency_tab) <- c("yes", "no")
-
-# Make df
-loc_contingency_tab_df <- loc_contingency_tab
-
-# Convert the data as a table
-loc_contingency_tab <- as.table(as.matrix(loc_contingency_tab))
-# Do test
-trans_loc_chi_sq <- chisq.test(loc_contingency_tab, simulate.p.value = T)
-# Do post-hoc test
-trans_loc_chi_sq_ph <- chisq.posthoc.test(loc_contingency_tab)
-
-
-
-# Odds ratios
+# Fisher tests and odds ratios
 
 # MAKE FUNCTION FOR COL OF INTEREST AFTER CHI-SQ POST-HOC TESTS
 or <- function(x, column){
@@ -746,23 +772,60 @@ or <- function(x, column){
   not_df <- x[!(names(x) %in% column)]
   df <- setNames(cbind(x[column], rbind(sum(not_df[1, ]), sum(not_df[2, ]))), c(column, "not"))
   
-  a <- df[1, 1]
-  b <- df[1, 2]
-  c <- df[2, 1]
-  d <- df[2, 2]
+  test <- fisher.test(df)
   
-  (a*d)/(b*c)
-
+  res_df <- data.frame(odds_ratio = test$estimate, 
+                       CI = paste0(round(test$conf.int[1], 2), ", ", round(test$conf.int[2], 2)),
+                       p_val = scientific(test$p.value))
+  
+  row.names(res_df) <- NULL
+  
+  res_df
 }
 
 # Lin
-or(lin_contingency_tab_df, "2")
-or(lin_contingency_tab_df, "4")
+lin_contingency_tab_df <- trans_df[trans_df$category == "Lineage", c("X", "in_trans", "not_in_trans")]
+lin_contingency_tab_df <- setNames(data.frame(t(lin_contingency_tab_df[,-1])), lin_contingency_tab_df[,1])
 
-or(dr_contingency_tab_df, "Pre-XDR")
-or(dr_contingency_tab_df, "XDR")
+fisher_tests <- 
+rbind(
+rbind(or(lin_contingency_tab_df, "1"), 
+      or(lin_contingency_tab_df, "2"), 
+      or(lin_contingency_tab_df, "3"),
+      or(lin_contingency_tab_df, "4")),
 
-or(loc_contingency_tab_df, "Peshawar")
+# DR
+rbind(
+or(dr_contingency_tab_df, "Sensitive"),
+or(dr_contingency_tab_df, "Pre-MDR"),
+or(dr_contingency_tab_df, "MDR"),
+or(dr_contingency_tab_df, "Pre-XDR"), 
+or(dr_contingency_tab_df, "XDR"),
+or(dr_contingency_tab_df, "Other")
+),
+
+# Location
+rbind(
+or(loc_contingency_tab_df, "Abbottabad"), 
+or(loc_contingency_tab_df, "Dera Ismail Khan"), 
+or(loc_contingency_tab_df, "Hyderabad"), 
+or(loc_contingency_tab_df, "Karachi"), 
+or(loc_contingency_tab_df, "Lahore"), 
+or(loc_contingency_tab_df, "Missing"), 
+or(loc_contingency_tab_df, "Other"), 
+or(loc_contingency_tab_df, "Peshawar"), 
+or(loc_contingency_tab_df, "Rawalpindi"), 
+or(loc_contingency_tab_df, "Swat")
+)
+)
+
+
+
+
+
+
+trans_df <- cbind(trans_df, fisher_tests)
+
 
 ```
 
@@ -1270,24 +1333,32 @@ snp_res$rs <- gsub("[a-z, A-Z, _]", "", snp_res$rs)
 snp_res_sort <- snp_res[order(snp_res$log_p, decreasing = T), ]
 gene_res_sort <- gene_res[order(gene_res$log_p, decreasing = T), ]
 
+# Add CI
+CI_plus <- round(gene_res_sort$beta + (1.96 * gene_res_sort$se), 2)
+CI_minus <- round(gene_res_sort$beta - (1.96 * gene_res_sort$se), 2)
+gene_res_sort$CI <- paste0(CI_plus, "-", CI_minus)
+
+# Change p-val to scientific
+gene_res_sort$p_wald <- scientific(gene_res_sort$p_wald)
+
 # Get p val of 10th snp/gene
 snp_res_10 <- snp_res_sort[10, "log_p"]
 gene_res_10 <- gene_res_sort[10, "log_p"]
 
-gwas_table <- gene_res_sort[1:5, c("rs", "beta", "log_p")]
+gwas_table <- gene_res_sort[1:5, c("rs", "beta", "CI", "p_wald")]
 
 gene_fun_lookup <- data.frame(rs = c("Rv2102", "Rv0914c", "nusG", "Rv2184c", "Rv1896c"), 
-                              Function = c("Uncharacterised", 
+                              Function = c("Uncharacterised protein", 
                                            "Possible lipid carrier protein or keto acyl-CoA thiolase", 
                                            "Transcription termination/antitermination protein NusG", 
                                            "Uncharacterized", 
                                            "Putative S-adenosyl-L-methionine-dependent methyltransferase"))
 
-gwas_table <- merge(gwas_table, gene_fun_lookup, by = "rs", all.x = T, sort = T)
+gwas_table <- merge(gwas_table, gene_fun_lookup, by = "rs", all.x = T, sort = F)
 
-gwas_table <- gwas_table[, c("rs", "Function", "beta", "log_p")]
+gwas_table <- gwas_table[, c("rs", "Function", "beta", "CI", "p_wald")]
 
-names(gwas_table) <- c("Gene", "Function", "beta", "-log10 Wald p-value")
+names(gwas_table) <- c("Gene", "Function", "beta", "95% Conf. Int.", "P-value")
 
 
 
@@ -1751,8 +1822,8 @@ global <- read.csv(global_file)
 names(global)[names(global) %in% "drug_resistant_."] <- "drug_resistant_pc"
 
 # Checks/have a look
-global[global[, "change"] == "c.-92T>G", ]
-global[global[, "change"] == "p.Ala288Asp", ]
+# global[global[, "change"] == "c.-92T>G", ]
+# global[global[, "change"] == "p.Ala288Asp", ]
 
 # Re-arrange cols, take out gene col
 global_subset <- global[, c("drug", "change", 
@@ -2111,7 +2182,7 @@ gheatmap(dr_status_loc_hm, trans_non_trans_df,
          font.size = font_sz,
          legend_title = "Transmission status") +
   labs(fill = "Transmission status")+
-  scale_fill_manual(values=c("white", "black"), labels = c("Transmission", "Non-transmission"))+
+  scale_fill_manual(values=c("white", "black"), labels = c("Non-transmission", "Transmission"))+
   legend_spec
 
 
@@ -2490,7 +2561,7 @@ qgraph::qgraph(1/dist_thresh,
 
 nusg_mut <- read.delim("../gwas_results/nusG_samples_mutations.txt", header = F)
 
-names(nusg_mut) <- c("wgs_id", "mut")
+names(nusg_mut) <- c("wgs_id", "mutation")
 
 nusg_mut <- merge(metadata["wgs_id"], nusg_mut, by = "wgs_id", all.x = T, sort = F)
 
@@ -2516,11 +2587,12 @@ trans_tree <- gheatmap(ggtree_all_samps, trans_non_trans_df,
                        font.size = 3,
                        legend_title = "Transmission status") +
   labs(fill = "Transmission status")+
-  scale_fill_manual(values=c("white", "black"), labels = c("Transmission", "Non-transmission"))+
+  scale_fill_manual(values=c("white", "black"), labels = c("Non-transmission", "Transmission"))+
   legend_spec
 
 trans_tree <- trans_tree + ggnewscale::new_scale_fill()
 
+png(filename = "../plots/nusG.png", width = 2000, height = 2000, res = 300)
 gheatmap(trans_tree, nusg_mut,
          width = width,
          offset = 0.003,
@@ -2533,6 +2605,7 @@ gheatmap(trans_tree, nusg_mut,
   scale_fill_manual(values = nusg_cols, breaks = names(nusg_cols) ) +
   labs(fill = "nusG mutations")+
   legend_spec
+dev.off()
 
 ```
 
